# SandboxFusion

./: .all-contributorsrc  .dockerignore  .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
assets/cruxeval_x_utils/: examples.json
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/blog/: 2024-10-18-hello.md  authors.yml
docs/docs/api/: get-metrics-function-get-metrics-function-post.api.mdx  get-metrics-get-metrics-post.api.mdx  get-prompt-by-id-get-prompt-by-id-post.api.mdx  get-prompt-get-prompt-by-id-post.api.mdx  index.md  root-get.api.mdx  sidebar.ts
docs/docs/docs/: get-started.mdx
docs/docs/docs/background/: _category_.json  dataset-types.md
docs/docs/docs/how-to/: _category_.json  add-samples.md  python-sdk.md
docs/src/: constants.ts  openapi.json
docs/src/components/: DatasetSelector.tsx
docs/src/css/: custom.css  index.less
docs/src/pages/: api.tsx  index.tsx
runtime/go/: go.mod  go.sum  main.go
runtime/jupyter/: main.py
runtime/lean/: Main.lean  lakefile.lean
runtime/node/: babel.config.js  package-lock.json  package.json
runtime/python/: install-gpu-runtime.sh  install-python-runtime.sh  install-pytorch.sh  requirements.txt
sandbox/: database.py  registry.py
sandbox/configs/: __init__.py  ci.yaml  local.yaml  run_config.py
sandbox/datasets/: __init__.py  aider_benchmark.py  autoeval.py  common_oj.py  cruxeval.py  humaneval.py  humaneval_deprecated.py  humanevoeval.py  live_code_bench.py  mbpp.py  mbxp.py  mhpp.py  minif2f.py  multiple.py  natural_code_bench.py  palmath.py  repobench_c.py  repobench_p.py  types.py  verilog.py
sandbox/pages/: index.html  oj.html  sandbox.html
sandbox/runners/: __init__.py  base.py  cuda.py  isolation.py  jupyter.py  major.py  minor.py  types.py
sandbox/server/: online_judge_api.py  sandbox_api.py  server.py
sandbox/tests/: __init__.py  conftest.py
sandbox/tests/datasets/: test_aider_benchmark.py  test_antihack.py  test_autoeval.py  test_bigcodebench.py  test_code_contests.py  test_common.py  test_cruxeval.py  test_cruxeval_x.py  test_evoeval.py  test_extraction.py  test_humaneval_bash.py  test_humaneval_cpp.py  test_humaneval_csharp.py  test_humaneval_go.py  test_humaneval_java.py  test_humaneval_multiple.py  test_humaneval_python.py  test_humaneval_typescript.py  test_humanevalds.py  test_live_code_bench_v1.py  test_mbpp.py  test_mbxp.py  test_mhpp.py  test_multiple.py  test_ncb.py  test_ooc_dataset.py  test_oodtest.py  test_palmath.py  test_provided_data.py  test_repobench_c.py  test_repobench_p.py  test_torch_op.py  test_utils.py  test_verilogeval.py
sandbox/tests/runners/: test_bash.py  test_cpp.py  test_csharp.py  test_cuda.py  test_d_ut.py  test_go.py  test_go_test.py  test_isolation.py  test_java.py  test_jest.py  test_julia.py  test_junit.py  test_jupyter.py  test_kotlin_script.py  test_lean.py  test_lua.py  test_nodejs.py  test_perl.py  test_php.py  test_pytest.py  test_python.py  test_python_gpu.py  test_r.py  test_racket.py  test_ruby.py  test_rust.py  test_scala.py  test_swift.py  test_typescript.py  test_verilog.py
sandbox/tests/runners/samples/cuda/: CMakeLists.txt  kernel.cuh  main.cu  utils.h
sandbox/utils/: antihack.py  common.py  execution.py  extraction.py  helpers.py  logging.py  prompting.py  sandbox_client.py  singleton.py  testing.py
scripts/: Dockerfile.base  Dockerfile.base.us  Dockerfile.server  Dockerfile.server.us  build_client.sh  clean_net_namespace.sh  create_net_namespace.sh  install-miniconda.sh  run.sh  tuna-apt.sh
scripts/client/: LICENSE  pyproject.toml  setup.py
scripts/client/src/sandbox_fusion/: __init__.py  async_client.py  client.py  common.py  config.py  models.py
scripts/git/: author_map.txt  merge_to_gh.sh  pull_gh.sh  push_to_gh.sh  rewrite_authors.sh  update_pages.sh
(+193 files in other folders)
