[project]
name = "sandbox-fusion"
version = "0.3.4"
description = "Client package of Sandbox Fusion service"
requires-python = ">=3.7"
authors = [
  { name="Liu Siyao", email="liusiyao.sine@bytedance.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
license = {text = "Apache-2.0"}
dependencies = [
    "requests>=2.0.0",
    "tenacity>=8.0.0",
    "pydantic>=1.0.0",
    "aiohttp>=3.0.0",
]

[tool.yapf]
based_on_style = "google"
column_limit = 120

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sandbox_fusion*"]